--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,23 @@
+<section id="footer">
+
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 ">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary"><p>© 2023 Dashcam @ Niran</p></span>
+      </div>
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><i class="bi bi-facebook"></i></li>
+        <li class="ms-3"><i class="bi bi-instagram"></i></li>
+        <li class="ms-3"><i class="bi bi-whatsapp"></i></li>
+      </ul>
+    </footer>
+  </div>
+</section>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
 
 document.getElementsByClassName("nav-link").onclick = function(){
@@ -5,5 +25,6 @@ document.getElementsByClassName("nav-link").onclick = function(){
 }
 
 </script>
+<script type="text/javascript" src="/js/jquery.js"></script>
 </body>
 </html>
